Fix homepage on mobile

--- a/public/css/public.css
+++ b/public/css/public.css
@@ -13723,7 +13723,7 @@ header nav {
     .slideshow #top_video {
       display: none; }
     .slideshow #intro-title {
-      top: 30%;
+      top: 25%;
       left: 0;
       width: 100%;
       padding: 20px; }
