--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -606,7 +606,7 @@ header nav {
     .slideshow #top_video {
       display: none; }
     .slideshow #intro-title {
-      top: 30%;
+      top: 25%;
       left: 0;
       width: 100%;
       padding: 20px; }
