--- a/resources/assets/sass/components/media-queries.scss
+++ b/resources/assets/sass/components/media-queries.scss
@@ -24,7 +24,7 @@
       }  
 
       #intro-title {
-        top: 30%;
+        top: 25%;
         left: 0;
         width: 100%;
         padding: 20px;   
